--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="index.css">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>128days</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Goodbye</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
+        body {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: black;
+            color: white;
+            font-family: 'Caveat';
+            font-size: 3em;
+            text-align: center;
+            position: relative;
+        }
+
+        .goodbye {
+            animation: fadeInGoodbye 3s ease-in;
+            position: relative;
+            display: inline-block;
+        }
+
+        .date {
+            animation: fadeInDate 3s ease-in 1s forwards;
+            font-size: 0.4em;
+            position: absolute;
+            bottom: -20px;
+            right: -40px;
+            opacity: 0;
+        }
+
+        @keyframes fadeInGoodbye {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+
+        @keyframes fadeInDate {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+    </style>
 </head>
 <body>
-  <canvas id="world"></canvas>
-
-  <div class="background">
-  </div>
-
-  <div class="white-boxes">
-  </div>
-    
-    <div class="timer">
-      <div class="countdown">
-        <p id="days"></p> 
-        <p id="hours"></p>
-        <p id="minutes"></p> 
-        <p id="seconds"></p>
-      </div>
-        <p id="freedom"><span>One second...</span></p>
-    </div>
-   </div>
-
-   <div class="paper">
-    <div class="paper-content">
-        <div class="text"></div>
-    </div>
-  </div>
-
-<script src="index.js"></script>
-<script src="confetti.js"></script>
+    <div class="goodbye"></div>
 </body>
 </html>
